--- a/index.html
+++ b/index.html
@@ -180,18 +180,19 @@
   const VISION_WASM = "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.8/wasm?v=5";
   const MODEL_URL  = "https://storage.googleapis.com/mediapipe-assets/hand_landmarker.task?v=5";
 
-  const vision = await FilesetResolver.forVisionTasks(VISION_WASM);
+ const vision = await FilesetResolver.forVisionTasks(
+  "https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.8/wasm"
+);
 
-  // Verificación explícita: si esto falla, sabremos por qué
-  console.log("Usando modelo:", MODEL_URL);
-  const head = await fetch(MODEL_URL, { method: "HEAD" });
-  if (!head.ok) throw new Error("Modelo no accesible: " + head.status + " " + MODEL_URL);
+handLandmarker = await HandLandmarker.createFromOptions(vision, {
+  baseOptions: {
+    // usa el archivo local para evitar CORS
+    modelAssetPath: "./hand_landmarker.task?v=6"
+  },
+  runningMode: "VIDEO",
+  numHands: 1
+});
 
-  handLandmarker = await HandLandmarker.createFromOptions(vision, {
-    baseOptions: { modelAssetPath: MODEL_URL },
-    runningMode: "VIDEO",
-    numHands: 1
-  });
 }
 
 
@@ -239,5 +240,6 @@
   </script>
 </body>
 </html>
+
 
 
