--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <div class="row">
       <div class="stage">
         <video id="video" playsinline muted></video>
-        <canvas id="paint"></canvas>
+        <canvas id="paint" class="overlay"></canvas>
+
         <canvas id="overlay" class="overlay"></canvas>
       </div>
 
@@ -263,6 +264,7 @@ drawLandmarks(lm.map(toCanvasCoords));
   </script>
 </body>
 </html>
+
 
 
 
